# wahoo

./: .gitignore  Cargo.toml  README.md
src/: builder.rs  context.rs  error.rs  filter.rs  log.rs  main.rs  manifest.rs  markdown.rs  prelude.rs  result.rs  server-stubs.html  server.rs  sink.rs  utils.rs
templates/: index.stpl
test/: wahoo.toml
test/src/: header.html  skip.ext
test/src/js/: index.js
test/src/subfolder/: subfolder-file.html
test/src/templates/: index.html
test/templates/: header.html
