[package]
name = "wahoo"
version = "0.1.0"
edition = "2021"

[dependencies]
tera = "1.17.1"
clap = { version = "3.2.17", features = ["derive"] }
toml = {version = "0.5.9", features = ["preserve_order"]}
serde = { version = "1.0.148" , features = ["derive"] }
serde_json = {version="1.0", features=["preserve_order"]}
thiserror = "1.0"
console = "0.15.0"
home = "0.5.3"
convert_case = "0.6.0"
globset = "0.4.9"
walkdir = "2.3.2"
tokio = { version = "1.20.1", features = ["full"] }
cfg-if = "1.0.0"
regex = "1.7.0"
async-std = "1.12.0"
duct = "0.13.5"
pulldown-cmark = "0.9.2"
workflow-i18n = {path="../workflow-i18n"}
notify = "5.0.0"
futures = "*"
notify-debouncer-mini = "*"
tide = "*"
