[package]
name = "wahoo"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.3"
async-std = "1.12.0"
cfg-if = "1.0.0"
clap = { version = "4.1.4", features = ["derive"] }
console = "0.15.5"
convert_case = "0.6.0"
duct = "0.13.6"
futures = "0.3.26"
globset = "0.4.10"
home = "0.5.4"
notify = {version="5.1.0"}
notify-debouncer-mini = {version="0.2.1", default-features = false}
pulldown-cmark = "0.9.2"
regex = "1.7.1"
serde = { version = "1.0.152" , features = ["derive"] }
serde_json = {version="1.0.91", features=["preserve_order"]}
tera = "1.17.1"
thiserror = "1.0.38"
tide = "0.16.0"
tide-websockets = "0.4.0"
tokio = { version = "1.25.0", features = ["full"] }
toml = {version = "0.7.1", features = ["preserve_order"]}
walkdir = "2.3.2"
workflow-core = { path = "../workflow-rs/core" }
workflow-i18n = { path="../workflow-rs/i18n" }
